--- a/requirements_x64.txt
+++ b/requirements_x64.txt
@@ -15,6 +15,7 @@ gpiozero==1.5.0
 tendo==0.2.12
 crc16==0.1.1
 # git+https://github.com/LowellInstruments/lowell-mat.git@mat-73-reduce#egg=lowell-mat
+dask[complete]
 
 
 
