--- a/requirements_rpi.txt
+++ b/requirements_rpi.txt
@@ -12,6 +12,6 @@ sortedcontainers==2.1.0
 gpiozero==1.5.0
 tendo==0.2.12
 crc16==0.1.1
-git+https://github.com/LowellInstruments/lowell-mat.git
+git+https://github.com/LowellInstruments/lowell-mat.git@lcble_delegation
 RPi.GPIO==0.6.5
 diskcache==4.0.0
