--- a/requirements_rpi.txt
+++ b/requirements_rpi.txt
@@ -1,7 +1,7 @@
-# requirements for RPi
-# (check README.md, too)
-# ----------------------
-# numpy
+# python requirements for RPi
+# (check README.md for Linux requirements)
+
+
 https://www.piwheels.org/simple/numpy/numpy-1.17.0rc1-cp37-cp37m-linux_armv7l.whl
 bluepy==1.3.0
 xmodem==0.4.5
@@ -15,3 +15,4 @@ crc16==0.1.1
 git+https://github.com/LowellInstruments/lowell-mat.git@lcble_delegation
 RPi.GPIO==0.6.5
 diskcache==4.0.0
+dask[complete]
