--- a/requirements_rpi.txt
+++ b/requirements_rpi.txt
@@ -12,9 +12,9 @@ sortedcontainers==2.1.0
 gpiozero==1.5.0
 tendo==0.2.12
 crc16==0.1.1
-git+https://github.com/LowellInstruments/lowell-mat.git@ble
+git+https://github.com/LowellInstruments/lowell-mat.git
 RPi.GPIO==0.6.5
 diskcache==4.0.0
 h5py==2.10.0
-pytz
-pandas
+pytz==2018.9
+pandas==0.25.3
