--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-# python requirements for RPi
-# (check README.md for Linux requirements)
-
+# python requirements for RPi (also check README.md)
 
 https://www.piwheels.org/simple/numpy/numpy-1.17.0rc1-cp37-cp37m-linux_armv7l.whl
 bluepy==1.3.0
