--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,8 @@ https://www.piwheels.org/simple/matplotlib/matplotlib-3.1.1-cp37-cp37m-linux_arm
 gpiozero==1.5.0
 tendo==0.2.12
 crc16==0.1.1
-git+https://github.com/LowellInstruments/lowell-mat.git
+# sexton is using archived MAT library
+git+https://kazola@bitbucket.org/kazola/lowell-mat.git
 h5py==2.10.0
 pytz==2018.9
 pandas==0.25.3
