--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-# python requirements for RPi (also check README.md)
-
+# requirements RPi, also check README.md
+# sexton/osu project uses MAT library v1200
 https://www.piwheels.org/simple/numpy/numpy-1.17.0rc1-cp37-cp37m-linux_armv7l.whl
 bluepy==1.3.0
-xmodem==0.4.5
+xmodem==0.4.6
 iso8601==0.1.12
 logzero==1.5.0
 https://www.piwheels.org/simple/matplotlib/matplotlib-3.1.1-cp37-cp37m-linux_armv7l.whl
@@ -13,5 +13,3 @@ h5py==2.10.0
 pytz==2018.9
 pandas==0.25.3
 tzlocal==2.1
-# sexton/osu project uses private archived lowell-mat git, install separately
-
