--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+# v2100 requirements
+# bluepy and MAT library installed at ddh_install.sh
+
 crc16==0.1.1
 gpiozero==1.5.0
 h5py==2.10.0
@@ -16,6 +19,3 @@ cartopy==0.18.0
 tzlocal==2.1
 wifi==0.3.8
 
-# on rpi, pyqt5 w/ pip crashes, do apt-get
-# bluepy mod installed by ddh scripts in lowell_tools repo
-# lowell-mat installed by ddh scripts in lowell_tools repo
