--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 PyYAML~=5.3.1
-matplotlib==3.3.3'
-wifi==0.3.8'
-pandas'
+matplotlib==3.3.3
+wifi==0.3.8
+pandas
 so8601==0.1.12
 gpiozero==1.5.0
 logzero==1.5.0
