--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,4 @@ Fiona==1.8.13.post1
 parse
 lowell-mat@git+https://github.com/LowellInstruments/lowell-mat.git
 boto3
+# PyQt5 NOT, since no packages for Rpi, do manually for dev platforms
